--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
     "next": "15.4.6",
+    "next-auth": "5.0.0-beta.29",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
